<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpengDroid</string>
    <string name="submit_link_url_label">URL</string>
    <string name="submit_link_description_label">Description</string>
    <string name="submit_link_keywords_label">Keywords</string>
    <string name="submit_button">Submit</string>
    <string name="error_toast">Error! Don\'t panic!</string>
    <string name="submit_link_title_label">Title</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    <string name="update_rss_feed">Update RSS Feed</string>
    <string name="article_list_empty">No articles.</string>
    
    <string name="pref_url">URL</string>
    <string name="pref_url_summary">Where to find the Spengler installation.</string>
    <string name="pref_auth_code">Authentication Code</string>
    <string name="pref_auth_code_summary">Your unique authentication code.</string>
    <string name="pref_rss_feed_update_rate">Feed Update Rate</string>
    <string name="pref_rss_feed_update_rate_summary">How often to check for new RSS feed entries.</string>    

    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="crash_notif_title">SpengDroid has crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
        
    <string name="crash_dialog_title">SpengDroid has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="menu_refresh_feed">Refresh feed</string>
</resources>
